[package]
name = "advent-of-code-2018"
version = "1.0.0"
authors = ["Joshua Vega <jvega@jsvcycling.com>"]
edition = "2018"

[dependencies]
chrono = "^0.4.6"

[[bin]]
name="day-01"
path="src/day_01.rs"

[[bin]]
name="day-02"
path="src/day_02.rs"

[[bin]]
name="day-03"
path="src/day_03.rs"

[[bin]]
name="day-04"
path="src/day_04.rs"