[package]
name = "advent-of-code-2018"
version = "1.0.0"
authors = ["Joshua Vega <jvega@jsvcycling.com>"]
edition = "2018"

[dependencies]
chrono = "^0.4.6"
lazy_static = "^1.2.0"

[[bin]]
name="day-01"
path="src/day_01.rs"

[[bin]]
name="day-02"
path="src/day_02.rs"

[[bin]]
name="day-03"
path="src/day_03.rs"

[[bin]]
name="day-04"
path="src/day_04.rs"

[[bin]]
name="day-05"
path="src/day_05.rs"

[[bin]]
name="day-06"
path="src/day_06.rs"

[[bin]]
name="day-07"
path="src/day_07.rs"

[[bin]]
name="day-08"
path="src/day_08.rs"